change the height of each section on mobile to fix precise viewport

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   text-align: center;
   overflow:hidden;
   scroll-behavior: smooth;
+  height:100%;
 }
 
 
